uncommected savenote method, fixed minor css bug on small devices

--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -29,9 +29,9 @@ html, body {
 }
 
 .note-title {
-  height: 50px;
+  height: 75px;
   margin-top: 13px;
-  font-size: 3rem;
+  font-size: 2.5rem;
 }
 
 .note-title:read-only, .note-textarea:read-only {
